	* CORE: Added a countOf() call to the Dao to return the select count(*) result for the table.
	* CORE: Added s clearTable() method to TableUtils.  It will do a TRUNCATE if supported otherwise a DELETE.
	* CORE: Added a convenience queryForEq() method to the Dao which matches on a single field value.
	* CORE: Tightened up some of the allocations done internally when building statements.

4.18: 3/30/2011 (svn r1593)
	* CORE: Fixed bug with lazy foreign collections are not properly limiting the iterator.  Fixes bug #3260099. Thanks to Brady.
	* CORE: Fixed bug with updating of foreign collections.  Fixes bug #3260103. Thanks to ede.
	* CORE: Added better support for batch tasks by using a database transaction if auto-commit isn't supported.
	* ANDROID: You can now use the callBatchTask method on the DAO which will use a transaction.

4.17: 3/27/2011 (svn r1576)
	* CORE: Fixed a couple of places were I was using Java 1.6 only methods.  Fixes bug #3260096.  Thanks to Javier and jc.
	* CORE: Improved the reentrance during query and class configuration initialization.
	* CORE: Improved the DaoManager handling of generic dao classes and a registerDao method.  Thanks to jc.
	* ANDROID: Fixed Android v1.6 support by removing some Java 1.6 methods. 

4.16: 3/23/2011 (svn r1553)
	** WARNING: ** 4.16 was released with some Java 1.6 calls which broke a lot of people.  This was fixed in 4.17.
	* CORE: Added support for @@ForeignCollectionField annotation which supports eager and lazy loaded collections of foreign objects.
	* CORE: Added a DaoManager which caches DAOs that are constructed so we only do it once per class.  Thanks to jc.
	* CORE: Added the BaseDaoEnabled class for supporting data objects which can self refresh/update/etc..  Good bit of refactoring.
	* CORE: Added the UUID DataType for supporting the storing UUID fields.  Auto-generation of UUID ids also works.  Thanks to jc.