@@ -1351,6 +1351,63 @@ public class BaseDaoImplTest extends BaseCoreTest {
 		assertEquals(id, results.get(0).id);
 	}
 
+	@SuppressWarnings("unchecked")
+	@Test
+	public void testUseOfAndMany() throws Exception {
+		Dao<Foo, String> dao = createDao(Foo.class, true);
+		assertEquals(0, dao.countOf());
+		Foo foo = new Foo();
+		String id = "1";
+		foo.id = id;
+		int val = 1231231;
+		foo.val = val;
+		assertEquals(1, dao.create(foo));
+		String notId = "not " + id;
+		foo.id = notId;
+		foo.val = val + 1;
+		assertEquals(1, dao.create(foo));
+
+		Where<Foo, String> where = dao.queryBuilder().where();
+		where.andMany(where.eq(Foo.VAL_COLUMN_NAME, val), where.eq(Foo.ID_COLUMN_NAME, id));
+
+		List<Foo> results = where.query();
+		assertEquals(1, results.size());
+		assertEquals(id, results.get(0).id);
+
+		// this should match none
+		where.clear();
+		where.andMany(where.eq(Foo.VAL_COLUMN_NAME, val), where.eq(Foo.ID_COLUMN_NAME, id),
+				where.eq(Foo.ID_COLUMN_NAME, notId));
+		results = where.query();
+		assertEquals(0, results.size());
+	}
+
+	@SuppressWarnings("unchecked")
+	@Test
+	public void testUseOfOrMany() throws Exception {
+		Dao<Foo, String> dao = createDao(Foo.class, true);
+		assertEquals(0, dao.countOf());
+		Foo foo = new Foo();
+		String id = "1";
+		foo.id = id;
+		int val = 1231231;
+		foo.val = val;
+		assertEquals(1, dao.create(foo));
+		String notId = "not " + id;
+		foo.id = notId;
+		foo.val = val + 1;
+		assertEquals(1, dao.create(foo));
+
+		Where<Foo, String> where = dao.queryBuilder().where();
+		where.orMany(where.eq(Foo.ID_COLUMN_NAME, id), where.eq(Foo.ID_COLUMN_NAME, notId),
+				where.eq(Foo.VAL_COLUMN_NAME, val + 1), where.eq(Foo.VAL_COLUMN_NAME, val + 1));
+
+		List<Foo> results = where.query();
+		assertEquals(2, results.size());
+		assertEquals(id, results.get(0).id);
+		assertEquals(notId, results.get(1).id);
+	}
+
 	/* ============================================================================================== */
 
 	protected static class ForeignNotNull {
